workloads/order-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api
spec: 
  selector: 
    app: order-api
  ports:
    - name: http
      port: 80
      targetPort: http
