workloads/order-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: order-api
spec: 
  ingressClassName: traefik
  rules:
    - host: order.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: order-api
                port: { name: http }
